examples/test/testpolicy18039.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18039
  namespace: namespace400
spec:
  podSelector:
    matchLabels:
      key23: value1
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value49
          key27: value28
          key5: value33
      podSelector:
        matchLabels:
          key13: value15
          key47: value29
